# Kaypro10Video

./: LICENSE  README.md  kaypro.uf2  kernel7.img
Kaypro10Video/: Kaypro10Video-B_Cu.gbr  Kaypro10Video-B_Mask.gbr  Kaypro10Video-B_Paste.gbr  Kaypro10Video-B_Silkscreen.gbr  Kaypro10Video-Edge_Cuts.gbr  Kaypro10Video-F_Cu.gbr  Kaypro10Video-F_Mask.gbr  Kaypro10Video-F_Paste.gbr  Kaypro10Video-F_Silkscreen.gbr  Kaypro10Video-NPTH.drl  Kaypro10Video-PTH.drl  Kaypro10Video-drl.rpt  Kaypro10Video-job.gbrjob  Kaypro10Video.kicad_pcb  Kaypro10Video.kicad_prl  Kaypro10Video.kicad_pro  Kaypro10Video.kicad_sch  fp-info-cache  report.txt  ~Kaypro10Video.kicad_pcb.lck
Kaypro10Video/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
Kaypro10VideoShim/: Kaypro10VideoShim-B_Cu.gbr  Kaypro10VideoShim-B_Mask.gbr  Kaypro10VideoShim-B_Paste.gbr  Kaypro10VideoShim-B_Silkscreen.gbr  Kaypro10VideoShim-Edge_Cuts.gbr  Kaypro10VideoShim-F_Cu.gbr  Kaypro10VideoShim-F_Mask.gbr  Kaypro10VideoShim-F_Paste.gbr  Kaypro10VideoShim-F_Silkscreen.gbr  Kaypro10VideoShim-NPTH.drl  Kaypro10VideoShim-PTH.drl  Kaypro10VideoShim-job.gbrjob  Kaypro10VideoShim.kicad_pcb  Kaypro10VideoShim.kicad_prl  Kaypro10VideoShim.kicad_pro  Kaypro10VideoShim.kicad_sch  report.txt
Kaypro10VideoShim/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
PiDisplay/: Makefile  SETUP.md  config.txt  kaypro.pal  kernel.cpp
PicoKaypro/: CMakeLists.txt  kaypro_capture.c  kaypro_windows.py  video_sampler.pio
